wip: add pwa functionality
ref #18

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,17 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="theme-color"
+			content="hsl(333deg 5% 9%)"
+			media="(prefers-color-scheme: dark)"
+		/>
+		<meta name="theme-color" content="hsl(32deg 52% 95%)" />
+		<link
+			rel="manifest"
+			crossorigin="use-credentials"
+			href="%sveltekit.assets%/manifest.json"
+		/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
